# nova-bidlens

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  AI文档智能比对平台-架构设计图.drawio  AI文档智能比对平台-架构设计文档.md  CLAUDE.md  README.md  STARTUP.md  build-win.bat  package.json  pnpm-lock.yaml  start-dev.bat  start-dev.ps1  ui-style-preview.html  ui-style-recommendations.html  v022-ui-ux-prototype.sha256  write_ast.py
.planning/: AUTONOMOUS-STATUS.md  E2E-DEBUG-STATE.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  V0.3.5-BUG-TRACKER.md
.playwright-mcp/: page-2026-07-20T14-53-32-200Z.yml  page-2026-07-20T14-56-45-377Z.yml
.tokrepo/: state.json
bidlens-engine/: AGENT.md  Cargo.toml
bidlens-engine/crates/common/: Cargo.toml
bidlens-engine/crates/common/src/: error.rs  lib.rs
bidlens-engine/crates/diff-engine/: Cargo.toml
bidlens-engine/crates/diff-engine/src/: lib.rs  optimized.rs
bidlens-engine/crates/document-ast/: Cargo.toml
bidlens-engine/crates/document-ast/src/: lib.rs
bidlens-engine/crates/review-core/: Cargo.toml
bidlens-engine/crates/review-core/src/: aggregation.rs  lib.rs  scoring.rs  sparse_index.rs  tender.rs
bidlens-engine/crates/review-core/src/detectors/: entity_detector.rs  fact_detector.rs  mod.rs  table_detector.rs  text_detector.rs
bidlens-engine/crates/table-diff/: Cargo.toml
bidlens-engine/crates/table-diff/src/: lib.rs  lib.rs.bak
bidlens-engine/src/: main.rs  risk_engine.rs  task_service.rs
bidlens-engine/tests/: field_mapping.rs  json_rpc.rs
demo/: README.md  index.html  server.py  start-server.bat
(+447 files in other folders)
