[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[package]
name = "bidlens-engine"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
diff-engine = { path = "crates/diff-engine" }
document-ast = { path = "crates/document-ast" }
review-core = { path = "crates/review-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
